Added "pac leaveall" console command Reintroduced ConsoleCommands Remove commons dependency Upgrader fixes